tdf#103611 sw: fix vertical alignment to page bottom margin

Allow to align objects to page bottom margin vertically in
Position and Size settings. Fix also DOCX import of VML shapes.

Co-authored-by: Attila Szűcs (NISZ)

Change-Id: I78db2553ee9d963b18a2d580b1cbb76c1917ac0b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/102379
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>